--- a/page1/part3/assets/scss/all.scss
+++ b/page1/part3/assets/scss/all.scss
@@ -7,5 +7,6 @@
 @import "./pages/index";
 @import "./pages/article";
 @import "./pages/content";
-@import "./pages/skill" 
+@import "./pages/skill" ;
+@import "./pages/contact" ;
 
