--- a/page1/part3/assets/scss/utils/_common.scss
+++ b/page1/part3/assets/scss/utils/_common.scss
@@ -1,3 +1,103 @@
+// 功能CSS
+
+// 登入頁面
+.login-wrapper {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(192, 192, 192, 0.3);
+  z-index: 3;
+
+  .login-container {
+    width: 350px;
+    height: 430px;
+    padding-top: 20px;
+    border: $second-gray-border;
+    border-radius: 5px;
+    background-color: rgb(255, 255, 255);
+
+    .login-box {
+      width: 225px;
+      height: 105px;
+      margin: 0 auto;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+
+    form {
+      letter-spacing: 3px;
+      .login-inputs {
+        width: 73%;
+        margin: 0 auto;
+        height: 16%;
+        display: flex;
+        flex-direction: column;
+
+        input {
+          width: 100%;
+          padding: 6px;
+          font-size: 16px;
+          line-height: 25px;
+          border: 0.5px solid $second-gray;
+          letter-spacing: 3px;
+        }
+      }
+
+      .forget-password {
+        width: 73%;
+        margin: 0 auto;
+        padding-top: 20px;
+        padding-bottom: 10px;
+        color: $second-gray;
+        text-align: end;
+        cursor: pointer;
+      }
+
+      .login-btns {
+        width: 73%;
+        margin: 0 auto;
+
+        .btn-group {
+          display: flex;
+          justify-content: space-between;
+
+          .login-btn {
+            margin: 18px 0px;
+            padding: 7px 34px;
+            font-size: 18px;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            background-color: $primary-blue;
+            letter-spacing: 3px;
+            cursor: pointer;
+          }
+        }
+
+        .gmail-btn {
+          padding: 8.5px 30px;
+          font-size: 18px;
+          color: #fff;
+          border: none;
+          border-radius: 5px;
+          background-color: #d93025;
+          letter-spacing: 3px;
+          cursor: pointer;
+        }
+      }
+    }
+  }
+}
+
 /* loading 動畫 */
 div.loading-drawing {
   z-index: 3;
@@ -94,18 +194,42 @@ div.loading-animation {
 
 // 左右擺動
 @keyframes RightLeftChange {
-  0%  {  transform: translate(-10px); }
-  5%  {  transform: translate(10px);  }
-  10% {  transform: translate(-10px); }
-  20% {  transform: translate(10px);  }
-  25% {  transform: translate(-10px); }
-  30% {  transform: translate(10px);  }
-  35% {  transform: translate(-10px); }
-  40% {  transform: translate(10px);  }
-  45% {  transform: translate(-10px); }
-  50% {  transform: translate(10px);  }
-  55% {  transform: translate(-10px); }
-  60% {  transform: translate(10px);  }
+  0% {
+    transform: translate(-10px);
+  }
+  5% {
+    transform: translate(10px);
+  }
+  10% {
+    transform: translate(-10px);
+  }
+  20% {
+    transform: translate(10px);
+  }
+  25% {
+    transform: translate(-10px);
+  }
+  30% {
+    transform: translate(10px);
+  }
+  35% {
+    transform: translate(-10px);
+  }
+  40% {
+    transform: translate(10px);
+  }
+  45% {
+    transform: translate(-10px);
+  }
+  50% {
+    transform: translate(10px);
+  }
+  55% {
+    transform: translate(-10px);
+  }
+  60% {
+    transform: translate(10px);
+  }
 }
 
 /* my-aside 動畫 */
