--- a/page1/part3/assets/css/all.css
+++ b/page1/part3/assets/css/all.css
@@ -153,6 +153,54 @@ a {
   cursor: pointer;
 }
 
+.alert-wrapper {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 10;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: none;
+}
+.alert-wrapper .alert-container {
+  width: 300px;
+  height: 180px;
+  background-color: white;
+  border-radius: 5px;
+}
+.alert-wrapper .alert-container .alert-title {
+  font-size: 24px;
+  text-align: center;
+  color: rgb(128, 128, 128);
+  letter-spacing: 3px;
+}
+.alert-wrapper .alert-container .alert-word {
+  text-align: center;
+  color: rgb(128, 128, 128);
+  margin-bottom: 22px;
+}
+.alert-wrapper .alert-container .alert-btn {
+  width: 30%;
+  margin: 0 auto;
+  padding: 5px;
+  font-size: 16px;
+  color: #fff;
+  text-align: center;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: rgb(26, 216, 211);
+}
+
 /* loading 動畫 */
 div.loading-drawing {
   z-index: 3;
@@ -2252,4 +2300,162 @@ main .contact-two-wrapper .contact-two-container .right-info .address-bottom {
 main .contact-two-wrapper .contact-two-container .right-info .address-bottom iframe {
   width: 100%;
   height: 100%;
+}
+
+main .profile-one-wrapper {
+  background-image: url("	https://frankyeah.github.io/Front-Enter/images/member-key.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  max-width: 100vw;
+  padding: 200px 0;
+  margin-bottom: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+main .profile-one-wrapper .profile-one-title {
+  font-size: 24px;
+  color: white;
+  background-color: rgba(128, 128, 128, 0.7);
+  padding: 6px 13px;
+  border-radius: 5px;
+  letter-spacing: 10px;
+  text-align: center;
+}
+main .profile-two-wrapper {
+  outline: 1px solid tomato;
+  padding: 60px 40px;
+}
+main .profile-two-wrapper .profile-two-container {
+  width: 85%;
+  height: 400px;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+main .profile-two-wrapper .profile-two-container .user-group {
+  width: 200px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 10px;
+}
+main .profile-two-wrapper .profile-two-container .user-group .btn-user {
+  width: 90px;
+  margin: 16px 0px;
+  padding: 10px 11px;
+  color: white;
+  border: 1px solid rgb(26, 216, 211);
+  border-radius: 5px;
+  background-color: rgb(26, 216, 211);
+}
+main .profile-two-wrapper .profile-two-container .user-input {
+  width: 600px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+main .profile-two-wrapper .profile-two-container .user-input .user-avavtar {
+  width: 150px;
+  height: 150px;
+  padding-bottom: 16px;
+}
+main .profile-two-wrapper .profile-two-container .user-input .user-avavtar img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+main .profile-two-wrapper .profile-two-container .user-input .user-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+main .profile-two-wrapper .profile-two-container .user-input .user-form .input-group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 60px;
+  margin-top: -10px;
+  font-size: 16px;
+}
+main .profile-two-wrapper .profile-two-container .user-input .user-form .input-group label {
+  font-weight: 600;
+}
+main .profile-two-wrapper .profile-two-container .user-input .user-form .input-group input {
+  width: 320px;
+  border-radius: 5px;
+  height: 33px;
+  padding-left: 5px;
+  margin-left: 32px;
+}
+main .profile-two-wrapper .profile-two-container .user-input .user-form .input-group input::-webkit-input-placeholder {
+  color: rgb(128, 128, 128);
+  font-size: 16px;
+}
+main .profile-two-wrapper .profile-two-container .user-input .user-form .input-group input::-moz-placeholder {
+  color: rgb(128, 128, 128);
+  font-size: 16px;
+}
+main .profile-two-wrapper .profile-two-container .user-input .user-form .input-group input:-ms-input-placeholder {
+  color: rgb(128, 128, 128);
+  font-size: 16px;
+}
+main .profile-two-wrapper .profile-two-container .user-input .user-form .input-group input::-ms-input-placeholder {
+  color: rgb(128, 128, 128);
+  font-size: 16px;
+}
+main .profile-two-wrapper .profile-two-container .user-input .user-form .input-group input::placeholder {
+  color: rgb(128, 128, 128);
+  font-size: 16px;
+}
+main .profile-two-wrapper .profile-two-container .user-input .user-form .btn-device {
+  width: 90px;
+  margin-top: 10px;
+  padding: 10px 11px;
+  color: white;
+  border: 1px solid rgb(26, 216, 211);
+  border-radius: 5px;
+  background-color: rgb(26, 216, 211);
 }/*# sourceMappingURL=all.css.map */
