--- a/page1/part3/assets/css/all.css
+++ b/page1/part3/assets/css/all.css
@@ -142,7 +142,7 @@ a {
   letter-spacing: 3px;
   cursor: pointer;
 }
-.login-wrapper .login-container form .login-btns .gmail-btn {
+.login-wrapper .login-container form .login-btns #gmail-btn {
   padding: 8.5px 30px;
   font-size: 18px;
   color: #fff;
@@ -151,6 +151,51 @@ a {
   background-color: #d93025;
   letter-spacing: 3px;
   cursor: pointer;
+}
+
+.alert-wrapper {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 10;
+  display: none;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.alert-wrapper .alert-container {
+  width: 300px;
+  height: 180px;
+  background-color: white;
+  border-radius: 5px;
+}
+.alert-wrapper .alert-container .alert-title {
+  font-size: 24px;
+  text-align: center;
+  color: rgb(128, 128, 128);
+  letter-spacing: 3px;
+}
+.alert-wrapper .alert-container .alert-word {
+  text-align: center;
+  color: rgb(128, 128, 128);
+  margin-bottom: 22px;
+}
+.alert-wrapper .alert-container #alert-btn {
+  width: 30%;
+  margin: 0 auto;
+  padding: 5px;
+  font-size: 16px;
+  color: #fff;
+  text-align: center;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: rgb(26, 216, 211);
 }
 
 /* loading 動畫 */
@@ -2252,4 +2297,300 @@ main .contact-two-wrapper .contact-two-container .right-info .address-bottom {
 main .contact-two-wrapper .contact-two-container .right-info .address-bottom iframe {
   width: 100%;
   height: 100%;
+}
+
+main .profile-one-wrapper {
+  background-image: url("	https://frankyeah.github.io/Front-Enter/images/member-key.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  max-width: 100vw;
+  padding: 200px 0;
+  margin-bottom: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+main .profile-one-wrapper .profile-one-title {
+  font-size: 24px;
+  color: white;
+  background-color: rgba(128, 128, 128, 0.7);
+  padding: 6px 13px;
+  border-radius: 5px;
+  letter-spacing: 10px;
+  text-align: center;
+}
+main .profile-two-wrapper {
+  padding: 60px 40px;
+}
+main .profile-two-wrapper .profile-two-container {
+  max-width: 1940px;
+  width: 100%;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+@media (max-width: 768px) {
+  main .profile-two-wrapper .profile-two-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+main .profile-two-wrapper .profile-two-container .user-group {
+  width: 200px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+@media (max-width: 768px) {
+  main .profile-two-wrapper .profile-two-container .user-group {
+    width: 420px;
+    margin: 0 auto;
+    padding-top: 40px;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+@media (max-width: 576px) {
+  main .profile-two-wrapper .profile-two-container .user-group {
+    width: 150px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+main .profile-two-wrapper .profile-two-container .user-group .btn-user {
+  width: 105px;
+  margin-top: 30px;
+  margin-left: 25px;
+  padding: 10px 11px;
+  color: white;
+  font-size: 16px;
+  border: 1px solid rgb(26, 216, 211);
+  border-radius: 5px;
+  background-color: rgb(26, 216, 211);
+  cursor: pointer;
+  letter-spacing: 3px;
+}
+main .profile-two-wrapper .profile-two-container .user-group .btn-user:hover {
+  color: rgb(26, 216, 211);
+  background-color: white;
+}
+@media (max-width: 768px) {
+  main .profile-two-wrapper .profile-two-container .user-group .btn-user {
+    margin-left: 0px;
+  }
+}
+main .profile-two-wrapper .profile-two-container .user-input {
+  width: 600px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+@media (max-width: 768px) {
+  main .profile-two-wrapper .profile-two-container .user-input {
+    width: 0px;
+    width: 150px;
+    margin: 0 auto;
+    -webkit-box-ordinal-group: 0;
+        -ms-flex-order: -1;
+            order: -1;
+  }
+}
+@media (max-width: 576px) {
+  main .profile-two-wrapper .profile-two-container .user-input {
+    font-size: 14px;
+  }
+}
+main .profile-two-wrapper .profile-two-container .user-input .user-avavtar {
+  width: 150px;
+  height: 150px;
+  margin-left: 25px;
+}
+@media (max-width: 768px) {
+  main .profile-two-wrapper .profile-two-container .user-input .user-avavtar {
+    margin-left: 0px;
+  }
+}
+@media (max-width: 576px) {
+  main .profile-two-wrapper .profile-two-container .user-input .user-avavtar {
+    width: 50px;
+    height: 50px;
+  }
+}
+main .profile-two-wrapper .profile-two-container .user-input .user-avavtar img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 50%;
+}
+main .profile-two-wrapper .profile-two-container .user-input .user-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-top: 30px;
+}
+main .profile-two-wrapper .profile-two-container .user-input .user-form .input-group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 60px;
+  margin-top: -10px;
+  font-size: 16px;
+}
+main .profile-two-wrapper .profile-two-container .user-input .user-form .input-group label {
+  color: rgb(158, 158, 158);
+  width: 100px;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 600;
+  letter-spacing: 3px;
+}
+@media (max-width: 576px) {
+  main .profile-two-wrapper .profile-two-container .user-input .user-form .input-group label {
+    width: 50px;
+  }
+}
+main .profile-two-wrapper .profile-two-container .user-input .user-form .input-group input {
+  width: 320px;
+  border-radius: 5px;
+  height: 33px;
+  padding-left: 5px;
+  margin-left: 32px;
+  color: rgb(128, 128, 128);
+  font-size: 16px;
+  letter-spacing: 3px;
+  border: rgba(230, 230, 230, 0.7);
+  background-color: rgba(230, 230, 230, 0);
+}
+main .profile-two-wrapper .profile-two-container .user-input .user-form .input-group input::-webkit-input-placeholder {
+  color: rgb(128, 128, 128);
+  font-size: 16px;
+  letter-spacing: 3px;
+}
+main .profile-two-wrapper .profile-two-container .user-input .user-form .input-group input::-moz-placeholder {
+  color: rgb(128, 128, 128);
+  font-size: 16px;
+  letter-spacing: 3px;
+}
+main .profile-two-wrapper .profile-two-container .user-input .user-form .input-group input:-ms-input-placeholder {
+  color: rgb(128, 128, 128);
+  font-size: 16px;
+  letter-spacing: 3px;
+}
+main .profile-two-wrapper .profile-two-container .user-input .user-form .input-group input::-ms-input-placeholder {
+  color: rgb(128, 128, 128);
+  font-size: 16px;
+  letter-spacing: 3px;
+}
+main .profile-two-wrapper .profile-two-container .user-input .user-form .input-group input::placeholder {
+  color: rgb(128, 128, 128);
+  font-size: 16px;
+  letter-spacing: 3px;
+}
+@media (max-width: 576px) {
+  main .profile-two-wrapper .profile-two-container .user-input .user-form .input-group input {
+    width: 250px;
+    margin-left: 0px;
+  }
+}
+main .profile-two-wrapper .profile-two-container .user-input .user-form .change-data {
+  width: 105px;
+  margin-top: 30px;
+  margin-left: 25px;
+  padding: 10px 11px;
+  color: white;
+  font-size: 16px;
+  border: 1px solid rgb(26, 216, 211);
+  border-radius: 5px;
+  background-color: rgb(26, 216, 211);
+  cursor: pointer;
+  letter-spacing: 3px;
+}
+main .profile-two-wrapper .profile-two-container .user-input .user-form .change-data:hover {
+  color: rgb(26, 216, 211);
+  background-color: white;
+}
+@media (max-width: 768px) {
+  main .profile-two-wrapper .profile-two-container .user-input .user-form .change-data {
+    margin-left: 0px;
+  }
+}
+main .profile-two-wrapper .profile-two-container .user-input .user-form .device-group {
+  display: none;
+  text-align: center;
+}
+main .profile-two-wrapper .profile-two-container .user-input .user-form .device-group .change-data {
+  width: 105px;
+  margin-top: 30px;
+  margin-left: 25px;
+  padding: 10px 11px;
+  color: white;
+  font-size: 16px;
+  border: 1px solid rgb(26, 216, 211);
+  border-radius: 5px;
+  background-color: rgb(26, 216, 211);
+  cursor: pointer;
+  letter-spacing: 3px;
+}
+main .profile-two-wrapper .profile-two-container .user-input .user-form .device-group .change-data:hover {
+  color: rgb(26, 216, 211);
+  background-color: white;
+}
+@media (max-width: 768px) {
+  main .profile-two-wrapper .profile-two-container .user-input .user-form .device-group .change-data {
+    margin-left: 0px;
+  }
 }/*# sourceMappingURL=all.css.map */
