--- a/page1/part3/assets/scss/utils/_common.scss
+++ b/page1/part3/assets/scss/utils/_common.scss
@@ -164,7 +164,8 @@ div.loading-animation {
   top: 0;
   left: 0;
   width: 100%;
-  height: 90%;
+  // height: 90%;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
